--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                         </div>
                         <div class="popup hidden">
                             <div><p class="share">S H A R E</p></div>
-                            <div><img src="./images/icon-facebook.svg" alt=""></div>
-                            <div><img src="./images/icon-twitter.svg" alt=""></div>
-                            <div><img src="./images/icon-pinterest.svg" alt=""></div>
+                            <div><a href="https://www.facebook.com/" target="_blank"><img src="./images/icon-facebook.svg" alt=""></a></div>
+                            <div><a href="https://twitter.com/?lang=en" target="_blank"><img src="./images/icon-twitter.svg" alt=""></a></div>
+                            <div><a href="https://www.pinterest.co.uk/" target="_blank"><img src="./images/icon-pinterest.svg" alt=""></a></div>
                             <div><button id="btn" class="trigger">
                                 <img class="img_share" src="./images/icon-share.svg" alt="">
                             </button></div>
